--- a/frontend/src/app/home/channels/channels.component.html
+++ b/frontend/src/app/home/channels/channels.component.html
@@ -57,5 +57,24 @@
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
     </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Join a Channel </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-form-field>
+        <input required matInput [(ngModel)]="channelName" placeholder="Enter channel name..." type="text" name="channelName">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Choose Communication" [(ngModel)]="comm">
+          <mat-option *ngFor="let comm of comms | async" [value]="comm.value">
+            {{comm.value}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-card-actions style="margin-bottom: -8px; padding-left: 16px;">
+        <button mat-button (click)="joinChannel()">
+            Join
+        </button>
+      </mat-card-actions>
+    </mat-expansion-panel>
   </mat-accordion>
-
