--- a/frontend/src/app/reply/reply.component.html
+++ b/frontend/src/app/reply/reply.component.html
@@ -1,11 +1,11 @@
 <mat-card id="homeButtons">
     <div class="padded-content">
-        <form method="POST" action="reply">
+        <form>
           <mat-form-field>
-              <textarea matTextareaAutosize matAutosizeMinRows="3"
+              <textarea [(ngModel)]="message" matTextareaAutosize matAutosizeMinRows="3"
               matAutosizeMaxRows="8" required matInput placeholder="Type your message here..." id="message" type="text" name="message"></textarea>
           </mat-form-field>
-          <button mat-raised-button>SEND</button>
+          <button mat-button (click)="send()">SEND</button>
         </form>
     </div>
 </mat-card>
