--- a/frontend/src/app/home/channels/channels.component.html
+++ b/frontend/src/app/home/channels/channels.component.html
@@ -33,18 +33,15 @@
       <mat-expansion-panel-header>
         <mat-panel-title> Join a Channel </mat-panel-title>
       </mat-expansion-panel-header>
+      <form [formGroup]="joinGroup" #joinForm>
       <mat-form-field>
-        <input required matInput [(ngModel)]="channelName" placeholder="Enter channel name..." type="text" name="channelName">
+        <input required matInput  formControlName="channelName" [(ngModel)]="channelName" placeholder="Enter channel name..." type="text" name="channelName">
       </mat-form-field>
-      <mat-form-field>
-        <mat-select placeholder="Choose Communication" [(ngModel)]="comm">
-          <mat-option *ngFor="let comm of comms | async" [value]="comm.value">
-            {{comm.value}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <app-communications [(ngModel)]="comm" [communications]="comms | async" formControlName="commValue" >
+              </app-communications>
+            </form>
       <mat-card-actions style="margin-bottom: -8px; padding-left: 16px;">
-        <button mat-button (click)="joinChannel()">
+        <button mat-button (click)="joinChannel(joinForm)">
             JOIN
         </button>
       </mat-card-actions>
