--- a/frontend/src/app/preferences/preferences.component.html
+++ b/frontend/src/app/preferences/preferences.component.html
@@ -4,10 +4,11 @@
   <mat-datepicker #startPicker></mat-datepicker>
 </mat-form-field>
 <mat-form-field>
-  <input matTooltip="If start date equals end date, there won't be any limit" matInput [min]="preferenceInterface.start" [matDatepicker]="endPicker" placeholder="End Date" [(ngModel)]="preferenceInterface.end" (dateChange)="dateChange($event)" (ngModelChange)="preferenceInterface.updateValue(newValue)" [disabled]="readOnly == true">
+  <input matTooltip="If start date equals end date, there won't be any limit" matInput [min]="preferenceInterface.start" [matDatepicker]="endPicker" placeholder="End Date" [(ngModel)]="preferenceInterface.end" (dateChange)="dateChange($event)" (ngModelChange)="preferenceInterface.updateValue(newValue)" [disabled]="readOnly == true || noExpiration == true">
   <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
   <mat-datepicker #endPicker></mat-datepicker>
 </mat-form-field>
+<mat-checkbox [(ngModel)]="noExpiration" (change)="updatePreference()">No expiration</mat-checkbox>
 <br/>
 <div>
   <app-interval [(data)]="preference.intervals" [readOnly]="readOnly"></app-interval>
