Implement restrictions & alias to channel creation & settings

--- a/frontend/src/app/channel/channel.component.html
+++ b/frontend/src/app/channel/channel.component.html
@@ -15,7 +15,7 @@
 
 
   <div class="padded-content">
-    <span class="channel-name">{{channelId}}</span>
+    <span class="channel-name"><h2 mat-header>{{channelId}}</h2></span>
 
     <router-outlet></router-outlet>
   </div>
