--- a/frontend/src/app/home/create-channel/create-channel.component.html
+++ b/frontend/src/app/home/create-channel/create-channel.component.html
@@ -15,7 +15,7 @@
         </app-communications>
     </form>
   </mat-step>
-  <mat-step label="Configure Active Hours" [stepControl]="timeForm">
+  <mat-step label="Configure Active Hours">
     <form>
       <div>
         <app-preferences [(preference)]="channel.channel.preference" [showRestrictions]="true" [(restrictions)]="channel.channel.restrictions"></app-preferences>
